# pyproject.toml for unified configuration and dependency management
# See docs/03-Environment_Management_Python_Tools.md and 05-Dependency_Management.md
[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "Modular Python project following best practices."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.mypy]
ignore_missing_imports = true
